finish login, register and main page functions

--- a/mysite/store/templates/goods_list.html
+++ b/mysite/store/templates/goods_list.html
@@ -49,7 +49,7 @@
 {% for goods in goods_list %}
   <tr bgcolor={% cycle '#ffffff' '#edf8ff' %}>
     <td class="col1"><a href="/detail/?id={{ goods.id }}">{{ goods.description }}</a></td>
-    <td class="col2">￥{{ goods.price }}</td>
+    <td class="col2">${{ goods.price }}</td>
     <td class="col3"><a href="/add/?id={{ goods.id}}&name={{ goods.name }}&price={{ goods.price }}&page=list">添加到购物车</a></td>
   </tr> 
 {% endfor %}
