finish the first version. Including login,register,shopping,logout and etc.

--- a/mysite/store/templates/cart.html
+++ b/mysite/store/templates/cart.html
@@ -32,7 +32,7 @@
 
             quantity = quantityInput.value
             if (isNaN(quantity)) {
-                alert("不是有效的数值！");
+                alert("not valid！");
                 quantityInput.value = 0;
                 quantity = quantityInput.value
                 quantityInput.focus();
